tests/education/errors/GetErrorNotFoundUuid.bru
meta {
  name: GetErrorNotFoundUuid
  type: http
  seq: 2
}

get {
  url: {{baseUrl}}/educations/{{externalGeneratedRandomUuid}}
  body: none
  auth: none
}

assert {
  res.status: eq 404
  res.body.message: matches Education not found
}
